k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-aws-eks-deployment
  labels:
    app: spring-aws-eks
  namespace: REPLACEME
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-aws-eks
  template:
    metadata:
      labels:
        app: spring-aws-eks
        annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "8086"
          prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: spring-aws-eks
          image: REPLACEDOCKERIMAGE
          ports:
            - containerPort: 8086
