k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-aws-eks-service
spec:
  type: NodePort
  selector:
    app: spring-aws-eks
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
